--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^2.1.8",
     "react-transition-group": "^4.4.1"
   },
   "scripts": {
